tests/snapshots/examples_fixtures/runtime_boundaries__adt_boundary_nominal_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/runtime_boundaries/adt_boundary_nominal_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
