tests/snapshots/examples_fixtures/runtime_boundaries__imported_function_return_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/runtime_boundaries/imported_function_return_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
