tests/snapshots/examples_fixtures/runtime_boundaries__named_function_boundary_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/runtime_boundaries/named_function_boundary_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
